# pyticdb

./: .commitlintrc.json  .pre-commit-config.yaml  .releaserc.json  AUTHORS.rst  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  noxfile.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  readme.rst  usage.rst
pyticdb/: __init__.py  cli.py  conn.py  models.py  query.py  transform.py
src/pyticdb/: __init__.py  conn.py  query.py  util.py
tests/: __init__.py  test_import.py
