[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyticdb"]
exclude = []
namespaces = false

[project]
name = "pyticdb"
description = "A quick reflector for stellar catalogs and other static SQL databases"
authors = [{name="William Fong", email="willfong@mit.edu"}]
readme = "README.rst"
dynamic = ["version"]

dependencies = [
    "sqlalchemy>=2.0",
    "click>=8.0",
    "setuptools>69.5",
    "configurables @ git+https://github.com/mit-kavli-institute/configurables.git",
]

[tool.setuptools.dynamic]
version = {attr = "pyticdb.__version__"}


[project.urls]
Home = "https://tessgit.mit.edu/wcfong/pyticdb"

[project.optional-dependencies]
dev = [
    "black>=24.4",
    "hypothesis>=6",
    "hypothesis_fspaths",
    "mypy==1.10",
    "pytest-cov",
    "pytest-mock",
    "pytest-sugar",
    "pytest-xdist",
    "pytest>=8.2",
    "tox>=4",
    "tox-docker>=4.1.0",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
