[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyticdb"
description = "A quick reflector for stellar catalogs and other static SQL databases"
authors = [{name="William Fong", email="willfong@mit.edu"}]
readme = "README.rst"
dynamic = ["version"]

dependencies = [
    "sqlalchemy>=2.0",
    "click>=8.0",
    "setuptools>69.5",
    "configurables @ git+https://github.com/mit-kavli-institute/configurables.git",
    "loguru>=0.7.3",
    "psycopg>=3.2.6"
]

[tool.setuptools.dynamic]
version = {attr = "pyticdb.__version__"}


[project.urls]
Home = "https://tessgit.mit.edu/wcfong/pyticdb"

[project.optional-dependencies]
dev = [
    "black>=24.4",
    "hypothesis>=6",
    "hypothesis_fspaths",
    "mypy==1.10",
    "pytest-cov",
    "pytest-mock",
    "pytest-sugar",
    "pytest-xdist",
    "pytest>=8.2",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
